# aws_lambda_language_benchmarking

./: .gitlab-ci.yml  Earthfile  Makefile  README.md
.github/: renovate.json5
.github/workflows/: claude-code-agent.yml  claude-code-review.yml  continuous-integration.yml  go-continuous-integration.yml  nodejs-continuous-integration.yml  python-continuous-integration.yml  rust-continuous-integration.yml
.gitlab/ci/: go.yml  nodejs.yml  python.yml  rust.yml
benchmarking/: k6-benchmarking.js  k6-benchmarking.sh  rust-1.52.1-25-05-2021.json
benchmarking/aws/: aws_benchmarking_graphing.py  go-03-02-2021.json  go-1.x-24-03-2021.json  go-1.x-25-05-2021.json  k6-benchmarking.sh  nodejs-03-02-2021.json  nodejs-12.x-24-03-2021.json  nodejs-14.x-25-05-2021.json  python3-03-02-2021.json  python3-3.8-24-03-2021.json  python3-3.8-25-05-2021.json  requirements.txt  (+3 more)
go/: README.md
infrastructure/: .gitignore  package-lock.json
local_benchmarking/: go-1.15.6.json  hyperfine.sh  local_benchmarking_graphing.py  nodejs-15.5.1.json  python3-3.8.2.json  rust-1.49.0.json
nodejs/: .gitignore  README.md  package-lock.json  package.json
python3/: README.md
rust/: .gitignore  README.md
rust/aws/: .gitignore  Cargo.toml  Earthfile  README.md
rust/aws/src/: main.rs
rust/local/: Cargo.toml  Earthfile  Makefile
rust/local/src/: main.rs
terraform/: .gitignore  .terraform.lock.hcl  api_gateway.tf  aws.tf  go_api_gateway.tf  go_lambda.tf  iam.tf  nodejs_api_gateway.tf  nodejs_lambda.tf  provider.tf  python3_api_gateway.tf  python3_lambda.tf  rust_api_gateway.tf  rust_lambda.tf
(+112 files in other folders)
