[package]
name = "aws_lambda_language_benchmarking"
version = "0.1.0"
authors = ["C <DeveloperC@protonmail.com>"]
edition = "2021"


[dependencies]
# Runtime
lambda_runtime = "0.3.0"
tokio = "1.6.0"

# Hashing
sha2 = "0.9.5"

# JSON serialization/deserialization
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"


[profile.release]
lto = 'fat'
codegen-units = 1
