[package]
name = "aws_lambda_language_benchmarking"
version = "0.1.0"
authors = ["C <DeveloperC@protonmail.com>"]
edition = "2021"


[dependencies]
# For AWS Lambda.
lambda_runtime = "1.0.0"
tokio = "1.15.0"

# For SHA256 hashing.
sha2 = "0.10.0"

# For JSON serialization/deserialization.
serde = "1.0.132"
serde_derive = "1.0.132"
serde_json = "1.0.73"


[profile.release]
lto = 'fat'
codegen-units = 1
