[package]
name = "aws_lambda_language_benchmarking"
version = "0.1.0"
authors = ["C <DeveloperC@protonmail.com>"]
edition = "2021"


[dependencies]
# For CLI parsing.
clap = { version = "4.4.6", features = ["derive"] }

# For SHA256 hashing.
sha2 = "0.10.8"


[profile.release]
lto = 'fat'
codegen-units = 1
